css/style.css
html {
  scroll-padding-top: 230px;
  scroll-behavior: smooth;
}

html:has(nav.scrolled) {
  scroll-padding-top: 120px;
}
body {
    font-family: 'Roboto', sans-serif;
    font-size: 16px;
    line-height: 1.5;
    background: #020024;
    background: radial-gradient(circle,#020024 0%,
                                    #090979 50%, 
                                    #004582 100%);
}

header, body {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 0;
    padding: 0;
    
}
h1, h2, h3 {
   font-family: "Oswald", sans-serif;
    font-optical-sizing: auto;
    font-weight: bold;
    font-style: normal; 
}

/*Header Section*/
.title h1 a {
    text-align: center;
    text-decoration: none;
    color: rgba(0, 136, 255, 1);
    text-shadow: 0 0 2px mintcream; 
    font-size: 3rem;
}

header nav {
    width: 100%;
    margin: 0 4rem;
    padding: 1rem 15%;
    transition: padding 1.2s ease, background-color 1.2s ease;
}
header nav.scrolled {
    position: fixed;
    top: 0;
    padding: 1rem 15%;
    background-color:#020024;
}
header nav ul {
    list-style: none;
    display: flex;
    gap: 1rem;
    padding: 0 1rem;
    margin: 0;
    justify-content: center;
}

header nav li {
    width: 70%;        
    height: 185px; 
    border-radius: 12px;
    overflow: hidden;
    box-shadow: 0 0 10px mintcream;
    transition: transform 0.3s ease, box-shadow 0.3s ease;    
}
header nav.scrolled li {
    width: 200px;        
    height: 75px;
}
header nav.scrolled li span{
    font-size: 1.5rem; 
}

header nav li:hover {
    transform: scale(1.05);
    font-size: 3rem;
    box-shadow: 0 0 1rem rgba(0, 136, 255, 1);  
    transition: all 0.5s ease;
}

header nav li a {
    display: block;
    width: 100%;
    height: 100%;
    position: relative;
    text-decoration: none;
}

header nav li img {
    width: 100%;
    height: 100%;
    object-fit: cover;   
    display: block;

}

header nav li span {
    position: absolute;
    text-align: center;  
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);  
    color: mintcream;
    font-weight: bold;
    background: rgba(0, 0, 0, 0.3);
    border-radius: 0.5rem;
    font-size: 2rem;
}

/*Main Section*/
main {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 2rem;
    width: 100%;
    color: mintcream;
}
main section {
    padding: 2rem 5rem;
    margin: 2rem 20rem;
    box-shadow: 0 0 10px mintcream;
    border-radius: 10px;
    max-width: 70%;
    background: #020024;
    background: radial-gradient(circle,#020024 0%,
                                    #090979 80%, 
                                    #004582 100%);
}
main section h2, main section h3 {
    text-align: center;
    font-size: 3rem;
    color: rgba(0, 136, 255, 1);
    text-shadow: 0 0 2px mintcream; 
    margin: 1rem 0;
}



/*Life Section*/
#life {
    display: flex;
    flex-direction: column;
    align-items: center;
}
#life p {
    text-indent: 2rem;
}
#life span{
    text-shadow: 0 0 15px yellow;
}
#life span:hover {
    text-shadow:0 0 25px cyan;
    color: red;
    transition: all 0.8s ease; 
}
#life section {
    margin: 1rem 0;
}



/*Sunset Section*/
#sunsets {
    text-align: center;
}
#sunsets a {
    font-size: 1.2rem;
    color: mintcream;
    text-decoration: none;
}
#sunsets img {
    width: 100%;
    height: 200px;
    object-fit: cover;   
    display: block;
    border-radius: 20px;
    box-shadow: 0 0 15px mintcream;
    margin-bottom: 1rem;
}
#sunsets img:hover {
    transform: scale(1.05);
    box-shadow: 0 0 20px mintcream;
    transition: transform 1s ease;
}
.sunset_photos {
    display: grid;
    grid-template-areas: 
    "sun1 sun2"
    "sun3 sun4"
    "sunN sunN";
    grid-template-columns: 1fr 1fr;
}
.sunset_photos div {
    margin: 2rem 1rem;  
}
.sunset1{ grid-area: sun1;}
.sunset2{ grid-area: sun2;}
.sunset3{ grid-area: sun3;}
.sunset4{ grid-area: sun4;}
.sunsetN{ grid-area: sunN;}




/*Hobbies Section*/
#hobbies p{
    text-indent: 1rem;
}
.two-column img {
    width: 100%;
    height: 250px;
    object-fit: cover;
    border-radius: 20px;
    box-shadow: 0 0 15px mintcream;
}
.two-column img:hover {
    transform: scale(1.05);
    box-shadow: 0 0 20px mintcream;
    transition: transform 1s ease;
}
.two-column {
    display: flex;
    gap: 20px;
}

.two-column > div {
    flex: 1;
}



/*Summer Job Section*/
#summer-job {
    column-count: 2;
    text-indent: 1rem;
    text-align: justify;
    word-spacing: 1px;
}
#summer-job h2{
    column-span: all;
}
#summer-job img{
    width: 100%;
    height: 200px;
    object-fit: cover;
    border-radius: 20px;
    box-shadow: 0 0 15px mintcream;
}
#summer-job img:hover {
    transform: scale(1.05);
    box-shadow: 0 0 20px mintcream;
    transition: transform 1s ease;
}


/*Formula 1 Section*/
#formula-1 {
    min-width: 0;
    overflow-x: auto;
}
#formula-1 p{
    text-indent: 1rem;
}
.section_F1 {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    width: 100%;
    align-items: center;
}
/*Table Section*/
table{
    width: 100%;
    table-layout: fixed;
    font-size: 0.9rem;
}
caption a{
    font-size: 2rem;
    margin-bottom: 1.5rem;
    color: powderblue;
    text-decoration: none;
}
caption a:hover {
  text-shadow: 0 0 20px rgba(0, 136, 255, 1);
  transition: text-shadow 0.3s ease;
}
tr {
    margin:2rem;
}
tbody tr:hover td{
    font-size: 1.2rem;
    color: powderblue;
    text-shadow: 0 0 20px rgba(0, 136, 255, 1);
    transition: all 1s ease;
}
tr:nth-of-type(1) td:nth-last-of-type(1) {
    color: gold;
}
tr:nth-of-type(2) td:nth-last-of-type(1) {
    color: silver;
}
tr:nth-of-type(3) td:nth-last-of-type(1) {
    color: #cd7f32;
}
td:nth-child(1) { text-align: left; } 
td:nth-child(2) { text-align: left; }    
td:nth-child(3) { text-align: left; }    
td:nth-child(4) { text-align: right;}   

th:nth-child(1) { text-align: left; }
th:nth-child(2) { text-align: left; }
th:nth-child(3) { text-align: left; }
th:nth-child(4) { text-align: right; }
/*Carousel Section*/
.section_F1 p, .carousel{
    flex: 1;
}
.carousel-wrapper {
    position: relative;
    width: 100%;
}
.carousel {
    width: 100%;
    overflow: hidden;
}
.slides {
    display: flex;
    transition: transform 0.4s ease;
}
.slide {
    flex: 0 0 100%;
    aspect-ratio: 5 / 3;
    border-radius: 20px;
    overflow: hidden;
}
.slide img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    display: block;
}
.arrow {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    background: #090979;
    color: mintcream;
    border: none;
    font-size: 2rem;
    width: 60px;
    height: 60px;
    border-radius: 50%;
    border: 2px solid;
    border-color: mintcream;
    padding-bottom: 0.1em;
    cursor: pointer;
    z-index: 1;
    transition: background 0.3s ease;
}

.arrow:hover {
    background: rgba(0, 136, 255, 1);
}

.arrow.left { left: -30px; }
.arrow.right { right: -30px; }


.dots {
    display: flex;
    justify-content: center;
    gap: 0.5em;
    margin-top: 0.5em;
}

.dot {
    width: 1em;
    height: 1em;
    background: #004582;
    border-radius: 50%;
    cursor: pointer;
    border: none;
    transition: background 0.3s ease;
}

.dot.active {
    background: powderblue;
}



/*Footer Section*/
footer {
  width: 100%;
  padding: 2rem;
  margin-top: 4rem;
  background-color: #020024;
  color: powderblue;
  text-align: center;
  box-sizing: border-box;
}
footer nav {
  display: flex;
  justify-content: center;
  gap: 2rem;
  margin-top: 1rem;
  flex-wrap: wrap;
}
footer nav a {
  color: powderblue;
  text-decoration: none;
}
footer nav a:hover {
  color: rgba(0, 136, 255, 1);
  transition: color 0.3s ease;
}



/*View Settings*/
@media (max-width:1440px) {
    main section {
        margin: 2rem 15rem;
    }
}

@media (max-width:1100px) {
    main section {
        margin: 2rem 12rem;
    }
}

@media (max-width:1000px) {
    main section {
        margin: 2rem;
    }

    #life section {
        padding: 2rem;
        margin: 1rem 2rem;
    }
    h3 {
        margin: 1rem 0;
    }
    .sunset_photos{
        grid-template-areas: 
        "sun1" 
        "sun2"
        "sun3" 
        "sun4"
        "sunN";
        grid-template-columns: 1fr;
    }
    #summer-job {
        column-count: 1;
    }
    .two-column {
        flex-direction: column;
    }
}

@media (max-width:800px) {
    
    header nav li span {
        font-size: 1.2rem;
    }
    header nav.scrolled li span {
        font-size: 1.1rem;
    }
    .section_F1 {
        flex-direction: column;
    }
}

@media (max-width:600px) {
    #sunsets img {
        height: 200px;
    }
}

